<resources>
    <string name="app_name">edsCV</string>

    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <!--string translatable resources for FireAuth-->
    <string name="AuthRegistered" translatable="false">The user was successfully registered</string>
    <string name="AuthTAG" translatable="false">FireAuth Service</string>
    <string name="AuthError" translatable="false">Authentication failed</string>
    <string name="authSuccess" translatable="false">Authentication success</string>

    <!--string translatable resources for LogIn and SignIn-->
    <string name="signHeader" translatable="false">Sign In</string>
    <string name="logHeader" translatable="false">Log In</string>
    <string name="userDisplayName" translatable="false">Username</string>
    <string name="userEmail" translatable="false">eMail</string>
    <string name="userPassword" translatable="false">Password</string>
    <string name="UserLogIn" translatable="false">I already have an account</string>
    <string name="userForgotPassword" translatable="false">Forgot your password?</string>
    <string name="UserSignIn" translatable="false">Create an account</string>
    <string name="btnLog" translatable="false">Log In</string>
    <string name="btnSign" translatable="false">Sign In</string>
    <string name="emptyFields" translatable="false">Do not leave empty fields</string>
    <string name="logOut" translatable="false">Log Out</string>
    <string name="Passwordthree" translatable="false">Next</string>
    <string name="emailSuccess" translatable="false">Check email to reset your password!!</string>
    <string name="emailError" translatable="false">Fail to send reset password email!</string>

    <string name="edt" translatable="false">Profile Edit</string>

    <!--string translatable resources for NavBarMainActivity-->
    <string name="title_activity_nav_bar_main" translatable="false">NavBarMainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">edsCV</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_filters" translatable="false">Filters</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_profile" translatable="false">Profile</string>
    <string name="menu_share" translatable="false">About us</string>

    <string name="Password" translatable="false">Recover Password</string>
    <string name="Passwordtwo" translatable="false">Recover</string>

    <string name="update" translatable="false">Update</string>

    <!--string resources for NVMA/fragments -->
    <string name="fragment_filters" translatable="false">The filters and extras using openCV will go here</string>
    <string name="fragment_gallery" translatable="false">The images captured using edsVC will go here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
