<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_filters"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_filters"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery"/>

        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_profile"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share"/>
    </group>


</menu>
