<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.LogIn"
        android:background="@drawable/bg_log_in">

    <TextView
            android:id="@+id/title"
            android:text="@string/logHeader"
            android:textSize="42sp"
            android:textColor="#E5E5E5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"/>


    <EditText
            android:id="@+id/emailL"
            android:hint="@string/userEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="#D8D8D8"
            android:textColor="#eee"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/passwordL"
            android:hint="@string/userPassword"
            android:inputType="textPassword"
            android:textColorHint="#D8D8D8"
            android:textColor="#eee"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            app:layout_constraintTop_toBottomOf="@+id/emailL"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/btnLogIn"
            android:text="@string/btnLog"
            android:textColor="#eee"
            android:background="@drawable/bg_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/passwordL"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/signInFragment"
            android:text="@string/UserSignIn"
            android:textSize="12sp"
            android:textColor="#E5E5E5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
            android:layout_marginTop="22dp"/>
    <TextView
            android:id="@+id/forgotPassword"
            android:text="@string/userForgotPassword"
            android:textSize="12sp"
            android:textColor="#E5E5E5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInFragment"
            android:layout_marginTop="16dp"/>


</android.support.constraint.ConstraintLayout>