<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.SignIn"
        android:background="@drawable/bg_sign_in">


    <TextView
            android:id="@+id/title"
            android:text="@string/signHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="50sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"/>

    <EditText
            android:id="@+id/usernameS"
            android:hint="@string/userDisplayName"
            android:inputType="text"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:layout_width="354dp"
            android:drawableLeft="@drawable/person"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:layout_height="59dp"
            android:background="@drawable/bg_input"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="156dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.508"/>

    <EditText
            android:id="@+id/emailS"
            android:hint="@string/userEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:layout_width="354dp"
            android:layout_height="59dp"
            android:background="@drawable/bg_input"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/ic_mail_black_24dp"
            android:padding="10dp"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameS"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"/>

    <EditText
            android:id="@+id/passwordS"
            android:hint="@string/userPassword"
            android:inputType="textPassword"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:drawableLeft="@drawable/contra"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:layout_width="354dp"
            android:layout_height="59dp"
            android:background="@drawable/bg_input"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            app:layout_constraintTop_toBottomOf="@+id/emailS"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/btnSignIn"
            android:text="@string/btnSign"
            android:textColor="#fff"
            android:background="@drawable/bg_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/passwordS"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/logInFragment"
            android:text="@string/UserLogIn"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.128"/>


</android.support.constraint.ConstraintLayout>